# duneprototypes

./: CMakeLists.txt  run_pdhd_wibeth3_tpc_decoder_dump_updated.fcl
duneprototypes/Coldbox/hd/: HDColdboxDAQWriter_module.cc  HDColdboxDataInterfaceWIB3_tool.cc  HDColdboxDataInterface_tool.cc
duneprototypes/Coldbox/vd/: VDColdboxDataInterface_tool.cc  VDColdboxTDERawInput_source.cc
duneprototypes/Iceberg/Monitor/: IcebergTpcMonitor_module.cc  Iceberg_decode_rawtpcmonitor.fcl
duneprototypes/Iceberg/RawDecoding/: IcebergDataInterfaceFELIXBufferMarch2021_tool.cc  IcebergDataInterface_tool.cc  IcebergFELIXBufferDecoderMarch2021_module.cc  IcebergHDF5DataInterface_tool.cc  IcebergTPCRawDecoder_module.cc
duneprototypes/Iceberg/Signal2Noise/: Signal2Noise_module.cc  signal2noise_dataprep_run3.fcl  signal2noise_dataprep_run4.fcl  signal2noise_dataprep_run5.fcl  (+3 more)
duneprototypes/Protodune/: CMakeLists.txt
duneprototypes/Protodune/vd/ChannelMap/: CMakeLists.txt  PD2VDBottomTPCChannelMap_v1.txt  PD2VDTPCChannelMap_v1.txt  PD2VDTopTDEChannelMap_v2.txt  PD2VDTopTPCChannelMap_v1.txt  PDMapAlg.h  PDVDChannelMapSP.cxx  PDVDChannelMapSP.h  PDVDChannelMapService.h  PDVDChannelMapService_service.cc  PDVDPDMapAlg.hh  PDVDPDMapAlg_tool.cc  PDVD_PDMapAlg.hh  PDVD_PDMapAlg_tool.cc  PDVD_PDS_Mapping.json  PDVD_PDS_Mapping_v04152025.json  PDVD_PDS_Mapping_v05092025.json  README.md  TPCChannelMapSP.cxx  TPCChannelMapSP.h
duneprototypes/Protodune/vd/ChannelMap/mapmakers/: addcrpnum.cxx  bdemapadjuster.cxx  bdemapadjuster_fortpcmap.cxx  fvis.C
ups/: product_deps
(+141 files in other folders)
